# cw-storage-benchmarks

./: .gitignore  Cargo.toml  README.md  api.ts  fadroma.yml  index.ts  ops.ts  package-lock.json  package.json  pnpm-lock.yaml  run.sh  shell.nix  start-localsecret.sh  tes.ts
contracts/fadroma-bench/: Cargo.toml
contracts/fadroma-bench/src/: lib.rs
contracts/toolkit-bench/: Cargo.toml
contracts/toolkit-bench/src/: lib.rs
src/fadroma-bench/: Cargo.toml
src/fadroma-bench/src/: lib.rs
src/toolkit-bench/: Cargo.toml
src/toolkit-bench/src/: lib.rs
wasm/: fadroma-bench@HEAD.wasm.sha256  toolkit-bench@HEAD.wasm.sha256
