[package]
name = "toolkit-bench"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10", features = ["random"] }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.9.0", default-features = false, features = ["storage"] }
serde = { version = "1.0" }
schemars = { version = "0.8.11" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10", default-features = false, features = ["iterator"] }
