[package]
name = "fadroma-bench"
version = "0.0.0"
edition = "2021"
authors = []
keywords = ["fadroma"]
description = ""
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fadroma = { version = "^0.8.7", features = ["scrt"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }